<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_RegularCheck_Results_DB" Id="{68ffa70e-c797-45f2-a759-6e243e1cdda6}">
    <Declaration><![CDATA[// X64 size: 572 bytes
TYPE ST_RegularCheck_Results_DB :
	STRUCT
		diStation_number          	: DINT ;
		diTrack_number            	: DINT ;
		dtStart_time              	: DT ;
		bSensor                  	: BOOL ;
		bCamera                  	: BOOL ;
		bLoadcell                	: BOOL ;
		bSensor2                 	: BOOL ;
		diRegular_check_id        	: DINT ;
		sFaam_id                 	: STRING(20) ;
		sSo_number               	: STRING(12) ;
		diSo_id                   	: DINT ;
		wsEmployee_name_logged_in 	: WSTRING(255) ;
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>